# Pair__algorithms

./: .gitmodules  CMakeLists.txt  main.cpp
include/: array.h  container_pair.h  list.h  pair.h
src/: container_pair.cpp  pair.cpp
tests/: gtest_array.cpp  gtest_container.cpp  gtest_pair.cpp
